--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
        
     
                <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="login.html">Login/Register</a>
             <a href="destinations.html">Destinations</a>
             <a href="tour package.html">Tour Packages</a>
@@ -233,3 +233,4 @@
 </div>
 </body>
 </html>
+
