--- a/admin.html
+++ b/admin.html
@@ -312,7 +312,7 @@
     <div class="top-nav-content">
         <a href="home.html" class="nav-logo">Explore World</a>
         <ul class="top-nav-links">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="login.html">Login / Register</a></li>
             <li><a href="destinations.html">Destination</a></li>
             <li><a href="tour package.html">Tour Package</a></li>
@@ -567,4 +567,5 @@
 </script>
 
 </body>
+
 </html>
