--- a/login.html
+++ b/login.html
@@ -260,7 +260,7 @@
                 <h1>Explore World</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <!-- Highlighting the current page -->
                 <li><a href="#" class="active">Login/Registration</a></li>
                 <li><a href="destinations.html">Destination</a></li>
@@ -376,4 +376,5 @@
         }
     </script>
 </body>
+
 </html>
