--- a/reviews.html
+++ b/reviews.html
@@ -311,7 +311,7 @@
        
     
                <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="login.html">Login/Register</a>
             <a href="destinations.html">Destinations</a>
             <a href="tour package.html">Tour Packages</a>
@@ -464,4 +464,5 @@
         }
     </script>
 </body>
+
 </html>
