--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h3>Popular Destinations</h3>
         <div class="cards">
             <div class="card">
-                <img src="C:\Users\syamm\OneDrive\Pictures\Screenshots\Screenshot 2026-01-27 105132.png"  alt="Paris">
+                <img src="Screenshot 2026-01-27 105531.png"  alt="Paris">
                 <h4>Paris</h4>
             </div>
             <div class="card">
@@ -233,4 +233,5 @@
 </div>
 </body>
 </html>
+
 
