--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
                 <h4>Paris</h4>
             </div>
             <div class="card">
-                <img src= "C:\Users\syamm\OneDrive\Pictures\Screenshots\Screenshot 2026-01-27 105329.png"alt="Maldives">
+                <img src= "C:Screenshot 2026-01-27 105329.png"alt="Maldives">
                 <h4>Maldives</h4>
             </div>
             <div class="card">
-                <img src="C:\Users\syamm\OneDrive\Pictures\Screenshots\Screenshot 2026-01-27 105531.png" alt="New York">
+                <img src="Screenshot 2026-01-27 105531.png" alt="New York">
                 <h4>New York</h4>
             </div>
         </div>
@@ -233,5 +233,6 @@
 </div>
 </body>
 </html>
+
 
 
