--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <h4>Paris</h4>
             </div>
             <div class="card">
-                <img src= "C:Screenshot 2026-01-27 105329.png"alt="Maldives">
+                <img src= "Screenshot 2026-01-27 105329.png"alt="Maldives">
                 <h4>Maldives</h4>
             </div>
             <div class="card">
@@ -233,6 +233,7 @@
 </div>
 </body>
 </html>
+
 
 
 
