--- a/tour package.html
+++ b/tour package.html
@@ -307,7 +307,7 @@
                 <div class="card">
                     <div class="card-image-wrapper">
                         <!-- Using placeholder image. Replace src with your local path if needed -->
-                        <img src="C:\Users\syamm\OneDrive\Pictures\Screenshots\Screenshot 2026-01-27 105132.png" alt="Europe Tour">
+                        <img src="Screenshot 2026-01-27 105329.png" alt="Europe Tour">
                     </div>
                     <div class="card-content">
                         <h4>Europe Tour</h4>
@@ -395,3 +395,4 @@
 </body>
 
 </html>
+
