--- a/tour package.html
+++ b/tour package.html
@@ -331,7 +331,7 @@
                 <!-- Card 3: America -->
                 <div class="card">
                     <div class="card-image-wrapper">
-                        <img src="C:\Users\syamm\OneDrive\Pictures\Screenshots\Screenshot 2026-01-27 105531.png" alt="America Tour">
+                        <img src="Screenshot 2026-01-27 105329.png" alt="America Tour">
                     </div>
                     <div class="card-content">
                         <h4>America Tour</h4>
@@ -395,4 +395,5 @@
 </body>
 
 </html>
+
 
